# CBN_FAVAR_REFACTOR

./: README.md  pyproject.toml
app/: main.py
config/: main.yaml
config/model/: model1.yaml
config/process/: process1.yaml
data/final/: exogC.csv
data/processed/: growth_rate.xlsx  processed.xlsx
notebooks/: FAVAR_Steps.ipynb
src/: Features_PCA.py  preprocess.py  process.py  train_model.py
