[tool.poetry]
name = "GDP_FAVAR_Model"
version = "0.1.0"
description = ""
authors = ["Clinton Mbataku"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
mlflow = "^1.29.0"
statsmodels = "^0.13.2"
openpyxl = "^3.0.10"
sklearn = "^0.0"
boto3 = "^1.24.91"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
